--- a/style.css
+++ b/style.css
@@ -1,19 +1,59 @@
+*{
+    padding: 0;
+    margin: 0;
+}
+
 body{
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
-    background-color: rgba(0, 255, 179, 0.692)
+    height: 50vh;
+    background-color: rgba(0, 255, 179, 0.692);
 }
+.menu_bar{
+    background-color: #fff;
+    height: 50px;
+    width: 1000px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 5%;
+    
+}
+
+.logo,h1{
+    color: green;
+}
+
+.menu_bar ul{
+    list-style: none;
+    display: flex;
+
+}
+.menu_bar ul li{
+padding: 10px 20px;
+}
+
+.menu_bar ul li a{
+color:black;
+text-decoration: none;
+font-size: 15px;
+
+}
+
+.menu_bar ul li a:hover{
+    color:purple;
+}
+
 
 .form{
     width: 25em;
     height: 30em;
     float: left;
-    border: 0.25em solid white;
-    font-size: 15px;
+    border: 0.20em solid white;
+    font-size: 12px;
     border-radius: 1em;
     position: absolute;
-    top:20%;
+    top:10%;
     left:50%;
     transform: translateY(-60%,-40%);
     background-color: #fff;
@@ -21,44 +61,6 @@ body{
 
 .form h3{
     text-align: center;
-}
-
-
-.center{
-    color: rgba(0, 128, 53, 0.842);
-    font-size: 30px;
-    font-family: Arial;
-    padding-left: 20px;
-    float: left;
-padding-top: 10px;
-}
-
-.menu{
-width: 400px;
-float: left;
-height: 70px;
-}
-
-ul{
-    float: left;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-ul li{
-    list-style: none; 
-    margin-left: 60px;
-    margin-top: 25px;
-    font-size: 14px;
-}
-ul li a{
-    text-decoration: none;
-    color: black;
-    font-weight: bold;
-    font-family: Arial;
-    transition: 0.4s ease-in-out;
-
 }
 .content{
   width: 700px;  
@@ -68,22 +70,18 @@ ul li a{
   position:relative;
   text-align: center;
 }
-.content .par{
-    padding-left: 30px;
+
+.content ,par{
+    padding-left: 10px;
     padding-bottom: 10px;
     font-family: Arial;
     letter-spacing: 1.2px;
     line-height: 20px;
-
+     text-align: left;
+     
 }
+
 .fa-solid fa-circle-user{
-font-size: 100px;
-color: #fff;
-align-items: end;
-}
-
-.my account{
-    align-items: end;
     font-size: 20px;
-    float: inline-end;
+    justify-content: end;
 }
