initiate changes in home pages

--- a/style.css
+++ b/style.css
@@ -7,15 +7,15 @@ body{
     justify-content: center;
     align-items: center;
     height: 50vh;
-    background-color: rgba(0, 255, 179, 0.692);
+    background-color:rgb(24, 173, 136);
+
 }
 .menu_bar{
     background-color: #fff;
     height: 50px;
-    width: 1000px;
+    width: 1500px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
     padding: 0 5%;
     
 }
@@ -30,7 +30,7 @@ body{
 
 }
 .menu_bar ul li{
-padding: 10px 20px;
+padding: 20px 60px;
 }
 
 .menu_bar ul li a{
@@ -47,14 +47,14 @@ font-size: 15px;
 
 .form{
     width: 25em;
-    height: 30em;
+    height: 28em;
     float: left;
     border: 0.20em solid white;
     font-size: 12px;
-    border-radius: 1em;
+    border-radius: none;
     position: absolute;
     top:10%;
-    left:50%;
+    left:48%;
     transform: translateY(-60%,-40%);
     background-color: #fff;
 }
@@ -80,3 +80,5 @@ font-size: 15px;
      text-align: left;
      
 }
+
+
